@@ -1,3 +1,7 @@
+2011-12-16  Douglas Bates  <bates@stat.wisc.edu>
+
+        * src/Evaluator.cpp: Avoid Rf_install inside an R API call
+
 2012-02-12  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/excections.R: Revert to previous use with .Internal
